# classic-saliency-detect

./: CMakeLists.txt  README.md  显著性检测算法测试.doc
include/: tracking.h
libHardWare/: CMakeLists.txt
libHardWare/mindVision/src/: mind_vision.cpp
src/: tracking.cpp
